--- a/csp/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/csp/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -35,6 +35,9 @@
   <br />
 
   <div class="row">
+    <div class="alert alert-warning" role="alert" *ngIf="message">
+      {{  message }}
+    </div>
     <div class="col-md-12">
       <table class="table">
         <thead>
@@ -46,7 +49,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngfor="let s of lista">
+          <tr *ngFor="let s of lista">
             <td>{{ s.cliente.nome }}</td>
             <td>{{ s.descricao }}</td>
             <td>{{ s.valor }}</td>
