Bug botão deletar resolvido

--- a/csp/src/app/app.component.html
+++ b/csp/src/app/app.component.html
@@ -6,18 +6,18 @@
       <div class="container-fluid">
         <router-outlet></router-outlet>
       </div>
-      <footer class="py-4 bg-light mt-auto">
+      <!-- <footer class="py-4 bg-light mt-auto align-items-base ">
         <div class="container-fluid">
-            <div class="d-flex align-items-center justify-content-between small">
-                <div class="text-muted">Copyright &copy; Meus clientes 2022</div>
-                <div>
-                    <a href="#">Privacy Policy</a>
+          <div class="d-flex align-items-center justify-content-end small ">
+            <div class="text-muted">Copyright &copy; Antony Diego 2022</div>
+            <div>
+              <a href="#">Privacy Policy</a>
                     &middot;
                     <a href="#">Terms &amp; Conditions</a>
-                </div>
             </div>
+          </div>
         </div>
-    </footer>
+      </footer> -->
     </main>
   </div>
 
