--- a/csp/src/app/clientes/clientes-lista/clientes-lista.component.html
+++ b/csp/src/app/clientes/clientes-lista/clientes-lista.component.html
@@ -48,7 +48,7 @@
                 <i class="fa fa-pen"></i>
               </button>
 
-              <button class="btn btn-danger" (click)="preparaDelecao(cliente)" data-toggle="modal"
+              <button class="btn btn-danger ml-1" (click)="preparaDelecao(cliente)" data-toggle="modal"
                 data-target="#modalDelecao">
                 <i class="fa fa-trash"></i>
               </button>
