--- a/csp/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/csp/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -58,7 +58,14 @@
 
 
     <div class="row">
-      <div class="col-md-3"><button type="submit" class="btn btn-success"> <i class="fa fa-save"></i> Salvar</button>
+      <div class="col-md-3">
+        <button type="submit" class="btn btn-success">
+          <i class="fa fa-save"></i> Salvar
+        </button>
+
+        <button type="submit" routerLink="/servico-prestado-listagem" class="btn btn-danger ml-1">
+          <i class="fa fa-arrow-alt-circle-left"></i> Voltar
+        </button>
       </div>
     </div>
   </form>
