--- a/csp/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/csp/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -25,8 +25,12 @@
 
     <div class="row">
       <div class="col-md-3">
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-primary ">
           <i class="fa fa-search"></i> Consultar
+        </button>
+
+        <button type="button" routerLink="/servico-prestado-form" class="btn btn-warning ml-1">
+          <i class="fa fa-plus"></i> Novo
         </button>
       </div>
     </div>
@@ -36,7 +40,7 @@
 
   <div class="row">
     <div class="alert alert-warning" role="alert" *ngIf="message">
-      {{  message }}
+      {{ message }}
     </div>
     <div class="col-md-12">
       <table class="table">
